[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/ui/SkillsUI.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/firesaw_skill_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[node name="SkillsUI" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrimarySkill" type="Control" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="FireSaw" type="Control" parent="Control/PrimarySkill"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/PrimarySkill/FireSaw"]
position = Vector2( 170, 190 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="FiresawTimer" type="Timer" parent="Control/PrimarySkill/FireSaw"]
wait_time = 12.0
one_shot = true

[node name="Label" type="Label" parent="Control/PrimarySkill/FireSaw"]
margin_left = 147.563
margin_top = 170.133
margin_right = 187.563
margin_bottom = 218.133
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
